[package]
name = "atlas_priority_fee_estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-geyser-plugin-interface = { version = "=1.17.31" }
solana-sdk = { version = "=1.17.31" }
solana-client = { version = "=1.17.31" }
solana-account-decoder = { version = "=1.17.31" }
solana-transaction-status = { version = "=1.17.31" }
solana-program-runtime = { version = "=1.17.31" }
crossbeam-channel = "0.5.6"
tokio = { version = "1.25.0", features = ["full"] }
csv = "1.3.0"
cadence = "0.29.0"
cadence-macros = "0.29.0"
dashmap = "5.5.3"
queues = "1.1.0"
jsonrpsee = { version = "0.20.1", features = [
    "server",
    "http-client",
    "macros",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "json",
    "env-filter",
    "ansi",
] }
tracing-appender = "0.2.3"
serde = { version = "1.0.190", features = ["derive"] }
base64 = "0.21.6"
bincode = "1.3.3"
yellowstone-grpc-proto = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v1.14.1+solana.1.17.31" }
yellowstone-grpc-client = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v1.14.1+solana.1.17.31" }
yellowstone-grpc-geyser = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v1.14.1+solana.1.17.31" }
rand = "0.8.5"
futures = "0.3.24"
figment = { version = "0.10.6", features = ["env", "test"] }
tower = { version = "0.4.13", features = ["full"] }
